# lucidpanda

./: .cursorrules  .dockerignore  .env.ai  .env.example  .gitignore  AGENTS.md  Alphasignal Progress Report  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile.backend  GEMINI.md  LICENSE  README.md  SSL_DEPLOYMENT_GUIDE.md  SUPPORT.md  build_log.txt  deploy-ssl-guide.sh  docker-compose.override.yml  docker-compose.yml  nginx-ssl.conf  package.json  pnpm-lock.yaml  requirements.txt  run.py  run_collector.py  run_funds.py  run_ids.txt  setup-ssl.sh  sse_server.py  update_stock_pinyin.py  项目开发进度文档.md
apps/api/: Dockerfile.backend  Dockerfile.db  Makefile  celery_config.py  coverage.xml  mypy_report.txt  pyproject.toml  requirements.txt  ruff_report.txt  test_proxy_ignore.py
apps/api/scripts/: celery_start.sh  diag_imap.py  generate_openapi.py  list_models.py  migrate_hnsw.py  migrate_vectors.py  seed_ontology.py  taskiq_start.sh  test_email_ingestion.py  test_entity_resolution.py  test_factor_indexing.py  test_fred.py  test_full_factor_flow.py  test_fund_confidence.py  test_fund_confidence_lite.py  test_memory_fix.py  test_pulse_api.py
apps/api/scripts/backfills/: backfill_all_pinyin.py  backfill_knowledge_graph.py  backfill_pinyin_full.py  clear_fund_data.py  fetch_cot.py  force_replay_recent.py  (+6 more)
apps/api/tests/: conftest.py  test_agent_tools.py  test_akshare_macro.py  test_auth_service.py  test_confidence.py  test_email.py  test_embedding_service.py  test_engine_core.py  test_entity_normalizer.py  test_fund_service.py  test_fusion.py  test_graph_reasoning.py  test_intelligence_service.py  test_llm_factory.py  test_market_service.py  test_multi_source.py  test_pydantic_settings.py  test_quant_skills.py  test_router_analytics.py  test_router_calendar.py  test_router_common.py  test_router_mobile.py  test_router_watchlist_v2.py  test_router_web.py  test_stock_pinyin.py  test_watchlist_service.py  test_web_graph_ops.py
(+754 files in other folders)
