[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lucidpanda-api"
version = "0.1.0"
description = "LucidPanda Intelligence & Quant API"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "schedule",
    "python-dotenv",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai",
    "beautifulsoup4",
    "google-genai",
    "dashscope>=1.14.0",
    "feedparser",
    "yfinance",
    "python-json-logger",
    "psycopg[binary,pool]",
    "fastapi",
    "sse-starlette",
    "uvicorn",
    "simhash",
    "dateparser",
    "pytz",
    "pandas",
    "GoogleNews",
    "socksio",
    "akshare",
    "pypinyin",
    "redis",
    "pandas_market_calendars",
    "python-jose[cryptography]",
    "passlib==1.7.4",
    "bcrypt==3.2.2",
    "python-multipart",
    "email-validator",
    "sqlalchemy",
    "resend",
    "pyotp",
    "qrcode[pil]",
    "httpx>=0.24.0",
    "webauthn>=2.0.0",
    "sqlmodel",
    "fastmcp",
    "statsmodels",
    "taskiq",
    "taskiq-redis",
    "taskiq-fastapi",
    "tenacity",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "streamlit",
    "plotly",
    "ruff",
    "mypy",
    "types-requests",
    "types-python-dateutil",
    "types-pytz",
    "types-redis",
    "pandas-stubs",
]

[tool.ruff]
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP",
]
ignore = [
    "E501", "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["lucidpanda"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "lucidpanda.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true
